--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             
         </div>
         <div class="footer">
-            
+            <p>Terima kasih</p>
         </div>
     </div>
 </body>
