--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         </div>
         <div class="content">
-            
+            <h1>ini content</h1>
         </div>
         <div class="footer">
             <p>Terima kasih</p>
